2002-02-08  Eric Blake  <ebb9@email.byu.edu>

	* src/platform.cpp:
	* src/platform.h (U8S_false, U8S_true): Added.
	* src/expr.cpp (CastValue): Simplified string conversion of
	boolean.
	(ProcessPLUS):
	* src/bytecode.cpp (LoadLiteral): Optimize loading -1L, 2L to 5L,
	-1.0f, -0.0f, 2.0f to 5.0f, -0.0, -1.0, 2.0 to 5.0.
	(EmitExpression): Fix bug with over-optimization of casts.
	(EmitBinaryExpression):
	* src/lookup.h:
	* src/lookup.cpp (CollectStrings): Renamed from EvaluateConstant.
	(EndsInKnownString): Renamed from IsConstantString.
	In general, adjusted string concatenation to work with known,
	non-constant strings (such as (Object)string, the null
	literal). Now jikes performs fully associative string
	concatenation, resulting in less bytecode!

2002-02-07  Eric Blake  <ebb9@email.byu.edu>

	* src/bytecode.cpp (ConcatenateString, AppendString): Fix one more
	case of non-const String + primitive.
	(LoadImmediateInteger): Optimize case of 0xffff.

2002-02-06  Eric Blake  <ebb9@email.byu.edu>

	* src/scanner.cpp:
	* src/scanner.: Silence '$' in identifier warnings when -nowarn
	specified.
	* src/parser.cpp (PackageHeaderParse): Allocate memory to prevent
	core dump when compiling GNU's Classpath.
	* src/lookup.cpp (IsConstantString): 
	* src/expr.cpp (CastValue, IsIntValueRepresentableInType): Fix
	missing cases in previous commit, exposed by Classpath.
	(ProtectedAccessCheck):
	* src/symbol.cpp (GetWriteAccessMethod): 
	* src/semantic.h (ProtectedAccessCheck): Update rules to fix bug
	exposed by Classpath.
	* src/decl.cpp (CompleteSymbolTable): Special case
	java.lang.Object when checking concrete classes.	

2002-02-05  Eric Blake  <ebb9@email.byu.edu>

	* src/definite.cpp (DefiniteExpression): Optimize DA/DU analysis
	of constant expressions.
	* src/body.cpp:
	* src/bytecode.cpp:
	* src/bytecode.h:
	* src/expr.cpp: Use IsConstantTrue and IsConstantFalse in more
	places, and convert LiteralValue* casts to DYNAMIC_CASTs.
	* src/lookup.cpp: