@@ -1,3 +1,7 @@
+2002-02-09  Eric Blake  <ebb9@email.byu.edu>
+
+	* src/bytecode.cpp (EmitStatement): Fix emission of dead code.
+
 2002-02-08  Eric Blake  <ebb9@email.byu.edu>
 
 	* src/platform.cpp:
